# devicesim

./: README.md
csharp/: .gitignore  AlsaCapture.cs  AlsaPlayer.cs  AudioCapture.cs  AudioPlayer.cs  CoreAudioCapture.cs  CoreAudioPlayer.cs  DeviceSim.csproj  Downmix.cs  EchoGate.cs  FileCapture.cs  FilePlayer.cs  IAudioCapture.cs  IAudioPlayer.cs  Program.cs  README.md  WasapiCapture.cs  WasapiPlayer.cs  WsSession.cs
csharp/Tests/: AudioCaptureTests.cs  DeviceSim.Tests.csproj  DownmixTests.cs  EchoGateTests.cs  UplinkMonoTests.cs
docs/: LGE_ThinQ_VoiceLive_시스템_아키텍처_KR.pptx  ThinQ-VoiceLive-DeviceSim-KR.pptx
ms_ref/: foundry_LV_Csharp_ref.cs
python/: README.md  pyproject.toml
python/src/device_emulator/: __init__.py  audio.py  main.py  protocol.py  session.py
python/tests/: __init__.py  test_audio_codec.py  test_echo_gate.py  test_file_backends.py  test_player.py  test_protocol.py  test_session.py  test_uplink_meter.py
