[project]
name = "device-emulator"
version = "0.1.0"
description = "LGE Voice Live 헤드리스 Python CLI 디바이스 에뮬레이터"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13",
    "sounddevice>=0.5",
    "numpy>=1.24",
    "click>=8",
]

[project.scripts]
device-emulator = "device_emulator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/device_emulator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
